# cpm_caffe

./: CMakeLists.txt
tests/: CMakeLists.txt  run-tests.sh  test_caffe.cpp
